# tkem

./: .gitignore  Cargo.toml  README.md
benches/: ml-kem.rs
examples/: decapsulate.rs  encapsulate.rs  keygen.rs  tenc.rs  test.rs
src/: ind_cca.rs  lib.rs  tkem1024.rs  tkem768.rs
src/ind_cca/: instantiations.rs  multiplexing.rs
src/ind_cca/instantiations/: avx2.rs
tests/: acvp.rs  kyber.rs  ml-kem.rs  nistkats.rs  self.rs  wycheproof.rs
