# 新目录的 Cargo.toml（完全独立，无工作区依赖）
[package]
name = "libcrux-ml-tkem"
version = "0.0.2"  # 或匹配工作区的 0.0.2
authors = ["Cryspen"]
license = "Apache-2.0"
homepage = "https://github.com/OxAndHorse/libcrux"
edition = "2021"
repository = "https://github.com/OxAndHorse/libcrux"
readme = "README.md"
description = "Libcrux ML-KEM & Kyber & tkem implementations"
exclude = [
    "/tests",
    "*.pdf",
    "/extracts",
    "/proofs",
    "/hax.py",
    "C-CODE.md",
    "TOOLS.md"
]

[lib]
bench = false

[dependencies]
rand = { version = "0.9", optional = true, default-features = false }
# 所有依赖替换为 crates.io 已发布的版本（删除 path 字段）
libcrux-platform = "0.0.2"
libcrux-sha3 = "0.0.4"
libcrux-intrinsics = "0.0.4"
libcrux-secrets = "0.0.4"
libcrux-traits = "0.0.4"
hax-lib = "0.3.5"
tls_codec = { version = "0.4.2", features = ["derive"], default-features = false, optional = true }

[features]
default = ["default-no-std", "std"]
default-no-std = ["mlkem512", "mlkem768", "tkem768", "mlkem1024", "tkem1024","kyber","rand"]
codec = ["dep:tls_codec"]
simd128 = ["libcrux-sha3/simd128", "libcrux-intrinsics/simd128"]
simd256 = ["libcrux-sha3/simd256", "libcrux-intrinsics/simd256"]
mlkem512 = []
mlkem768 = []
mlkem1024 = []
tkem768 = []
tkem1024 = []
kyber = []
rand = ["dep:rand"]
std = ["alloc", "rand/std", "tls_codec/std"]
alloc = []
incremental = []
check-secret-independence = [
    "libcrux-secrets/check-secret-independence",
    "libcrux-traits/check-secret-independence",
]
pqcp = []

[dev-dependencies]
rand = { version = "0.9", features = ["thread_rng"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
criterion = "0.7"
libcrux-traits = { version = "0.0.4", features = ["generic-tests"] }

[[bench]]
name = "ml-kem"
harness = false

[[example]]
name = "encapsulate"
required-features = ["mlkem768"]

[[example]]
name = "decapsulate"
required-features = ["mlkem768"]

[[example]]
name = "keygen"
required-features = ["mlkem768"]

[package.metadata."docs.rs"]
features = ["kyber", "pqcp"]
rustdoc-args = ["--cfg", "doc_cfg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
] }